# jqpp

./: .gitignore  Cargo.toml  README.md  mise.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
demo/: demo.json  demo.tape
docs/maturity/: README.md  any-all.md  contains.md  first-last-generator.md  foreach.md  getpath.md  has.md  input-inputs.md  inside.md  limit.md  map-values.md  map.md  match.md  pow.md  reduce.md  scan.md  select.md  setpath-delpaths.md  sub-gsub.md  test.md  to-entries-with-entries.md  until-while.md
docs/maturity/completed/: add.md  ascii-case.md  capture.md  debug.md  empty.md  error.md  exp.md  explode.md  first-last-nth.md  flatten.md  floor-ceil-round.md  format-operators.md  from-entries.md  fromjson.md  gmtime-mktime.md  implode.md  isnan.md  keys-values.md  length.md  log.md  min-max.md  nan-infinite.md  now-env.md  paths.md  (+15 more)
examples/: contains-substrings.json  endswith-suffixes.json  split-separators.json  startswith-prefixes.json  string-functions-kitchen-sink.json
scripts/: gen_json.sh
src/: accept.rs  app.rs  config.rs  executor.rs  handlers.rs  handlers_tests_clean.rs  hints.rs  keymap.rs  lib.rs  loop_state.rs  main.rs  mouse.rs  output.rs  suggestions.rs  terminal.rs  ui.rs
src/completions/: fuzzy.rs  jq_builtins.rs  json_context.rs  lsp.rs  mod.rs
src/widgets/: mod.rs  query_input.rs  side_menu.rs
tests/: cli_flags.rs  config_tests.rs  exit_tests.rs  integration_test.rs  keyboard_tests.rs  lsp_integration.rs  mock_lsp.rs  output_flag_tests.rs  pipe_integration.rs
tests/helpers/: mock_lsp.rs
(+110 files in other folders)
